fixed login completely added avatar to user profile

--- a/app/src/main/res/layout/popupwindowuser.xml
+++ b/app/src/main/res/layout/popupwindowuser.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                 android:layout_height="match_parent" android:background="@color/betweenDarkBlue">
-    <Button
-            android:text="Button"
-            android:layout_width="168dp"
-            android:layout_height="112dp" android:id="@+id/button2" android:elevation="0dp"
-            android:layout_alignParentEnd="true" android:layout_marginEnd="29dp"/>
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="30sp"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white" android:layout_alignParentBottom="true"
+            android:layout_marginBottom="164dp"/>
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="287dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView_avatar_userpopup"/>
 </RelativeLayout>
