--- a/app/src/main/res/layout/content_event_scrolling.xml
+++ b/app/src/main/res/layout/content_event_scrolling.xml
@@ -33,7 +33,8 @@
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:background="@color/lightestBlue"
-                      android:layout_below="@+id/textView_aboutTitle">
+                      android:id="@+id/comments_container"
+                      android:layout_below="@id/textView_aboutEvent" android:orientation="vertical">
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerView_comments"
                     android:layout_width="match_parent"
