--- a/app/src/main/res/layout/popupwindowuser.xml
+++ b/app/src/main/res/layout/popupwindowuser.xml
@@ -2,13 +2,36 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                 android:layout_height="match_parent" android:background="@color/betweenDarkBlue">
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="30sp"
-            android:textColor="@android:color/white" android:layout_alignParentBottom="true"
-            android:layout_marginBottom="164dp"/>
     <ImageView
             android:layout_width="match_parent"
-            android:layout_height="287dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView_avatar_userpopup"/>
+            android:layout_height="287dp"
+            tools:srcCompat="@tools:sample/avatars"
+            android:id="@+id/imageView_avatar_userpopup"/>
+
+    <TextView
+            android:text="Name:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_name_text"
+            android:textSize="25sp"
+            android:textColor="@android:color/white"
+            android:layout_below="@+id/imageView_avatar_userpopup"
+            android:layout_alignParentLeft="true"/>
+
+    <TextView
+            android:text="ime prezime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_name"
+            android:textSize="25sp"
+            android:textColor="@android:color/white"
+            android:layout_below="@+id/imageView_avatar_userpopup"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/user_name_text"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"/>
+
+
+
 </RelativeLayout>
