--- a/app/src/main/res/layout/popupwindowuser.xml
+++ b/app/src/main/res/layout/popupwindowuser.xml
@@ -9,7 +9,7 @@
             android:id="@+id/imageView_avatar_userpopup"/>
 
     <TextView
-            android:text="Name:"
+            android:text="Name: "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/user_name_text"
@@ -28,6 +28,31 @@
             android:layout_below="@+id/imageView_avatar_userpopup"
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@id/user_name_text"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"/>
+    <TextView
+            android:text="Type: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_type_text"
+            android:textSize="25sp"
+            android:textColor="@android:color/white"
+            android:layout_below="@+id/user_name_text"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"/>
+    <TextView
+            android:text="tip korisnika"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_type"
+            android:textSize="25sp"
+            android:textColor="@android:color/white"
+            android:layout_below="@+id/user_name"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/user_type_text"
             android:layout_centerInParent="true"
             android:layout_centerHorizontal="true"
             android:textAlignment="center"/>
