--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -1,61 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="@android:color/white"
-            android:layout_marginBottom="@dimen/margin_cardView" android:layout_marginTop="@dimen/margin_cardView"
+            android:layout_height="120dp"
+            app:cardBackgroundColor="@color/cardview_shadow_end_color"
+            app:cardElevation="0dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
             android:id="@+id/listItem_comment">
-        <LinearLayout
+        <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="1">
-
-        </LinearLayout>
+                android:layout_height="0.5dp"
+                android:background="@color/darkestBlue"
+                />
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="1"
                 android:gravity="center_vertical"
                 android:id="@+id/layout_eventListItem">
 
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:weightSum="1"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:text="TextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView_commentDate"
+                        android:textColor="@color/lightBlueWithAlpha"
+                        android:padding="@dimen/card_view_padding"
+                        android:textSize="10sp"
+
+                />
+                <TextView
+                        android:text="TextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/textView_commentAuthor"
+                        android:textColor="@color/darkBlue"
+                        android:padding="@dimen/card_view_padding"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
+                        android:gravity="center"
+
+                />
+            </LinearLayout>
             <TextView
                     android:text="TextView"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView_commentDate"
-                    android:layout_weight="0.2"
-                    android:textColor="@color/darkBlue"
-                    android:padding="@dimen/card_view_padding"
-                    android:textAlignment="center"
-            />
-            <TextView
-                    android:text="TextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView_commentAuthor"
-                    android:layout_weight="0.2"
-                    android:textColor="@color/darkBlue"
-                    android:padding="@dimen/card_view_padding"
-                    android:textAlignment="center"
-            />
-            <TextView
-                    android:text="TextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:id="@+id/textView_commentContent"
                     android:layout_weight="0.6"
                     android:textColor="@color/darkBlue"
                     android:padding="@dimen/card_view_padding"
+                    android:gravity="center"
+
                     android:textAlignment="center"
             />
         </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
