--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -53,7 +53,6 @@
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:gravity="center"
-
                 />
             </LinearLayout>
             <TextView
@@ -65,7 +64,7 @@
                     android:textColor="@color/darkBlue"
                     android:padding="@dimen/card_view_padding"
                     android:gravity="center"
-
+                    android:justificationMode="inter_word"
                     android:textAlignment="center"
             />
         </LinearLayout>
