- added mail display to user profile + send mail option if on another users profile

--- a/app/src/main/res/layout/popupwindowuser.xml
+++ b/app/src/main/res/layout/popupwindowuser.xml
@@ -8,14 +8,35 @@
             tools:srcCompat="@tools:sample/avatars"
             android:id="@+id/imageView_avatar_userpopup"/>
 
+    <ImageButton
+            android:layout_width="59dp"
+            android:layout_height="47dp"
+            android:id="@+id/mail_icon"
+            android:layout_below="@+id/imageView_avatar_userpopup"
+            android:src="@android:drawable/ic_dialog_email"
+            android:background="@null"/>
+
+    <TextView
+            android:text="email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_email"
+            android:textSize="20sp"
+            android:textColor="@android:color/white"
+            android:layout_below="@+id/imageView_avatar_userpopup"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/mail_icon"
+            android:layout_centerInParent="true"
+            android:textAlignment="center" android:layout_marginTop="13dp" android:layout_marginRight="6dp"/>
+
     <TextView
             android:text="Name: "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/user_name_text"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textColor="@android:color/white"
-            android:layout_below="@+id/imageView_avatar_userpopup"
+            android:layout_below="@+id/user_email"
             android:layout_alignParentLeft="true"/>
 
     <TextView
@@ -23,9 +44,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/user_name"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textColor="@android:color/white"
-            android:layout_below="@+id/imageView_avatar_userpopup"
+            android:layout_below="@+id/user_email"
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@id/user_name_text"
             android:layout_centerInParent="true"
@@ -36,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/user_type_text"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textColor="@android:color/white"
             android:layout_below="@+id/user_name_text"
             android:layout_alignParentLeft="true"
@@ -48,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/user_type"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textColor="@android:color/white"
             android:layout_below="@+id/user_name"
             android:layout_alignParentRight="true"
