-added date joined to user profile / added date joined to CUser

--- a/app/src/main/res/layout/popupwindowuser.xml
+++ b/app/src/main/res/layout/popupwindowuser.xml
@@ -85,6 +85,31 @@
                 android:layout_centerInParent="true"
                 android:layout_centerHorizontal="true"
                 android:textAlignment="center"/>
+        <TextView
+                android:text="Date joined: "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/date_joined_user_text"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                android:layout_below="@+id/user_type_text"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"/>
+        <TextView
+                android:text="datum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/date_joined_user"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                android:layout_below="@+id/user_type"
+                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@id/user_type_text"
+                android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"/>
 
 
 
