--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,7 +3,7 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:background="@color/betweenDarkBlue"
+                                             android:background="@color/lightestBlue"
                                              android:layout_height="match_parent">
     <ImageView
             android:layout_width="wrap_content"
@@ -81,9 +81,33 @@
             android:text="Select a hall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView_display_text_map" android:layout_marginTop="32dp"
+            android:id="@+id/textView_display_text_map"
             app:layout_constraintTop_toBottomOf="@+id/imageView_map_image" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:textColor="@color/colorAccent"/>
+            android:textColor="@color/darkestBlue" android:textSize="20sp"/>
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                 xmlns:tools="http://schemas.android.com/tools"
+                 android:layout_width="0dp"
+                 android:layout_height="0dp"
+                 tools:context=".map.MapFragment"
+                 android:background="@android:color/white"
+                 android:id="@+id/fragment_map"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/textView_display_text_map"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:background="@color/lightestBlue">
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView_map"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+            />
+        </LinearLayout>
+
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
