Add animations, fixed favourite events fragment for no user logged in and no internet connection.

--- a/app/src/main/res/layout/content_event_scrolling.xml
+++ b/app/src/main/res/layout/content_event_scrolling.xml
@@ -13,11 +13,18 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:padding="@dimen/textPadding_medium">
-        <ProgressBar
+        <com.airbnb.lottie.LottieAnimationView android:layout_width="match_parent"
+                                               android:layout_height="300dp"
+                                               app:lottie_loop="true"
+                                               app:lottie_autoPlay="true"
+                                               android:layout_centerInParent="true"
+                                               app:lottie_fileName="loading-dots.json"
+                                               android:id="@+id/event_scrolling_activity_progress_bar_content"/>
+        <!--<ProgressBar
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/event_scrolling_activity_progress_bar_content" android:layout_centerInParent="true"/>
+                android:id="@+id/event_scrolling_activity_progress_bar_content" android:layout_centerInParent="true"/>-->
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/textView_aboutTitle"
@@ -34,7 +41,6 @@
 
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="match_parent"
-                      android:background="@drawable/border"
                       android:id="@+id/comments_container"
                       android:layout_below="@id/textView_aboutEvent" android:orientation="vertical">
             <LinearLayout android:layout_width="match_parent"
@@ -45,7 +51,7 @@
                           android:weightSum="1">
                 <EditText android:layout_width="0dp"
                           android:layout_height="wrap_content"
-                          android:layout_weight="0.8"
+                          android:layout_weight="0.88"
                           android:hint="@string/write_a_comment"
                           android:id="@+id/editText_comment"
                           android:inputType="textCapSentences|textAutoCorrect"
@@ -54,7 +60,7 @@
                 />
                 <Button android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.12"
                         android:id="@+id/button_sendComment"
                         android:background="@drawable/ic_menu_send"
                         android:backgroundTint="@color/lightBlue"/>
