--- a/app/src/main/res/layout/fragment_favourite_event.xml
+++ b/app/src/main/res/layout/fragment_favourite_event.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent" android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/fragment_favourite_event_recycler"
     />
-    <ProgressBar
+    <!--<ProgressBar
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/fragment_favourite_event_progress_bar" android:layout_centerInParent="true"/>
+            android:id="@+id/fragment_favourite_event_progress_bar" android:layout_centerInParent="true"/>-->
+    <com.airbnb.lottie.LottieAnimationView android:layout_width="match_parent"
+                                           android:layout_height="match_parent"
+                                           app:lottie_loop="true"
+                                           app:lottie_autoPlay="true"
+                                           android:layout_centerInParent="true"
+                                           android:id="@+id/fragment_favourite_event_progress_bar"
+                                           app:lottie_fileName="loading-dots.json"
+                                           android:visibility="invisible"/>
 </RelativeLayout>
