--- a/app/src/main/res/layout/activity_event_scrolling.xml
+++ b/app/src/main/res/layout/activity_event_scrolling.xml
@@ -42,15 +42,16 @@
                         android:layout_height="@dimen/iconSize_mediumToLarge" app:srcCompat="@drawable/ic_tag_qa"
                         android:id="@+id/imageView_eventType" android:layout_weight="0.2"/>
                 <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:layout_weight="0.2">
+                        android:layout_width="250dp"
+                        android:layout_height="200dp" android:layout_weight="0.2">
 
-                    <ProgressBar
+                    <!--<ProgressBar
                             style="?android:attr/progressBarStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/event_scrolling_activity_progress_bar_header"
-                            android:layout_centerInParent="true"/>
+                            android:layout_centerInParent="true"/>-->
+
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" android:id="@+id/textView_eventLocation"
