--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
                                              android:layout_height="match_parent">
 
     <LinearLayout
-            android:background="@drawable/border"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="73dp"
@@ -21,14 +22,23 @@
             android:gravity="center_vertical"
             android:id="@+id/linearLayout_Date">
 
-        <ImageView android:layout_width="60dp"
+        <!--<ImageView android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/ic_event"
                    android:contentDescription="event icon"
-                   android:tint="@color/lightestBlue"/>
+                   android:tint="@color/lightestBlue"/>-->
+        <com.airbnb.lottie.LottieAnimationView android:layout_width="60dp"
+                                               android:layout_height="60dp"
+                                               app:lottie_autoPlay="true"
+                                               app:lottie_loop="true"
+                                               app:lottie_fileName="event.json"
+                                               android:layout_gravity="center"
+                                               android:layout_marginStart="4dp"
+                                               android:layout_marginTop="4dp"
+                                               android:layout_marginBottom="4dp"/>
 
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -40,7 +50,6 @@
     </LinearLayout>
 
     <LinearLayout
-            android:background="@drawable/border"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +62,9 @@
             android:gravity="center_vertical"
             android:id="@+id/linearLayout3" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout_Date"
-            app:layout_constraintVertical_bias="0.03">
+            app:layout_constraintVertical_bias="0.03"
+            android:orientation="vertical">
+
         <TextView
                 android:text="@string/confDescription"
                 android:layout_width="match_parent"
@@ -67,6 +78,13 @@
                 android:justificationMode="inter_word"
 
         />
+
+        <com.airbnb.lottie.LottieAnimationView android:layout_width="300dp"
+                                               android:layout_height="300dp"
+                                               app:lottie_autoPlay="true"
+                                               app:lottie_loop="true"
+                                               app:lottie_fileName="loading-world.json"
+                                               android:layout_gravity="center"/>
 
     </LinearLayout>
 
