--- a/app/src/main/res/layout/fragment_no_connection.xml
+++ b/app/src/main/res/layout/fragment_no_connection.xml
@@ -2,8 +2,9 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:background="@color/darkBlue"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/fragment_noConnection">
 
     <TextView
@@ -11,19 +12,27 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView_noConnection"
             android:text="@string/text_noConnection"
-            android:textColor="@color/lightestBlue"
+            android:textColor="@color/darkBlue"
             android:textSize="@dimen/textSize_noConnection"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-    <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            app:srcCompat="@drawable/ic_wifi"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"/>
+    <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:id="@+id/imageView2"
-            android:contentDescription="@string/content_desc_ic_wifi"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/textView_noConnection"
-            app:layout_constraintVertical_chainStyle="packed" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="@dimen/margin_medium"
+    app:lottie_autoPlay="true"
+    app:lottie_loop="true"
+    app:lottie_fileName="router.json"/>
 </android.support.constraint.ConstraintLayout>
