--- a/app/src/main/res/layout/activity_event_scrolling.xml
+++ b/app/src/main/res/layout/activity_event_scrolling.xml
@@ -35,8 +35,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="1"
-
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center_vertical"
+                    android:focusableInTouchMode="true"
+                    android:clickable="true"
+                    android:focusable="true"
+                    >
                 <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/iconSize_mediumToLarge" app:srcCompat="@drawable/ic_tag_qa"
