--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -28,6 +28,7 @@
             android:id="@+id/imageButton_hall1_map"
             app:layout_constraintTop_toTopOf="@+id/guideline_1_3_4h"
             app:layout_constraintStart_toStartOf="@+id/guideline_1v"
+            android:background="@null"
     />
     <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                           android:id="@+id/guideline_2v"
@@ -42,7 +43,8 @@
             android:layout_height="130dp" tools:srcCompat="@tools:sample/avatars"
             android:id="@+id/imageButton_hall2_map"
             app:layout_constraintTop_toTopOf="@+id/guideline_2h"
-            app:layout_constraintStart_toStartOf="@+id/guideline_2v"/>
+            app:layout_constraintStart_toStartOf="@+id/guideline_2v"
+            android:background="@null"/>
     <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                           android:id="@+id/guideline3_v"
                                           android:orientation="vertical"
@@ -52,7 +54,9 @@
             android:layout_height="116dp" tools:srcCompat="@tools:sample/avatars"
             android:id="@+id/imageButton_hall3_map"
             app:layout_constraintTop_toTopOf="@+id/guideline_1_3_4h"
-            app:layout_constraintStart_toStartOf="@+id/guideline3_v"/>
+            app:layout_constraintStart_toStartOf="@+id/guideline3_v"
+            android:background="@null"/>
+
     <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                           android:id="@+id/guideline4_v"
                                           android:orientation="vertical"
@@ -62,7 +66,9 @@
             android:layout_height="114dp" tools:srcCompat="@tools:sample/avatars"
             android:id="@+id/imageButton_hall4_map"
             app:layout_constraintTop_toTopOf="@+id/guideline_1_3_4h"
-            app:layout_constraintStart_toStartOf="@+id/guideline4_v"/>
+            app:layout_constraintStart_toStartOf="@+id/guideline4_v"
+            android:background="@null"/>
+
     <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                           android:id="@+id/guideline5_v"
                                           android:orientation="vertical"
@@ -76,7 +82,8 @@
             android:layout_height="77dp" tools:srcCompat="@tools:sample/avatars"
             android:id="@+id/imageButton_hall5_map"
             app:layout_constraintStart_toStartOf="@+id/guideline5_v"
-            app:layout_constraintTop_toTopOf="@+id/guideline5_h"/>
+            app:layout_constraintTop_toTopOf="@+id/guideline5_h"
+            android:background="@null"/>
     <TextView
             android:text="Select a hall"
             android:layout_width="wrap_content"
