- comment edit text improved - 30% of upload photo feature done

--- a/app/src/main/res/layout/content_event_scrolling.xml
+++ b/app/src/main/res/layout/content_event_scrolling.xml
@@ -50,24 +50,58 @@
                       android:id="@+id/comments_container"
                       android:layout_below="@id/textView_aboutEvent"
                       android:orientation="vertical">
+
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:orientation="vertical"
+                          android:id="@+id/linearLayout_uploadedImageContainer"
+                          android:layout_gravity="start">
+
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@color/darkestBlue"
+                />
+
+                <ImageView android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:layout_gravity="start"
+                           android:paddingTop="6dp"
+                           android:paddingBottom="6dp"
+                           android:id="@+id/imageView_uploadedImage"
+                           android:contentDescription="@string/contentDescriptionUploadedImage"/>
+            </LinearLayout>
+
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:orientation="horizontal"
                           android:id="@+id/writeACommentContainer"
                           android:layout_margin="6dp"
+                          android:layout_gravity="bottom"
                           android:weightSum="1">
                 <EditText android:layout_width="0dp"
                           android:layout_height="wrap_content"
-                          android:layout_weight="0.88"
+                          android:layout_weight="0.74"
                           android:hint="@string/write_a_comment"
                           android:id="@+id/editText_comment"
-                          android:inputType="textCapSentences|textAutoCorrect"
+                          android:maxLines="5"
+                          android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                           android:maxLength="150"
-
                 />
                 <Button android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="0.14"
+                        android:gravity="bottom"
+                        android:layout_gravity="bottom"
+                        android:id="@+id/button_uploadImage"
+                        android:background="@android:drawable/ic_menu_camera"
+                />
+
+                <Button android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.12"
+                        android:gravity="bottom"
+                        android:layout_gravity="bottom"
                         android:id="@+id/button_sendComment"
                         android:background="@drawable/ic_menu_send"
                         android:backgroundTint="@color/lightBlue"/>
