--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -118,8 +118,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/fragment_schedule_progress_bar" android:layout_centerInParent="true"
             />-->
-            <com.airbnb.lottie.LottieAnimationView android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
+            <com.airbnb.lottie.LottieAnimationView android:layout_width="200dp"
+                                                   android:layout_height="200dp"
                                                    app:lottie_loop="true"
                                                    app:lottie_autoPlay="true"
                                                    android:layout_centerInParent="true"
